Bug 975644: Enable position sticky in table parts. r=bz

MozReview-Commit-ID: 85nCuChHdTa